# dubisnake

./: .gitignore  README.md  build.mjs  index.html  package.json
src/: index.template.html  styles.css
src/css/: buttons.css  frame.css  hud.css  lang-toggle.css  level-banner.css  overlay.css  tutorial.css
src/html/: board.html  hud.html  mobile-help.html
src/js/: 20-strings.js  30-assets.js  50-core.js  60-overlays.js  70-render.js  80-events-boot.js  assets.js  chasers.js  constants.js  core.js  layout.js  overlays.js  render.js  strings.js
src/js/animations/: ghost-idle.js  opener.js
template/: .npmrc  README.md  build.mjs  index.html  package.json
template/docs/: ARCHITECTURE.md
template/src/: index.template.html
template/src/css/: base.css  board.css  footer.css  lang-toggle.css  level-banner.css  mobile-help.css  overlay.css  tutorial.css
template/src/js/: _boot.js  constants.js  overlays.js  strings.js
template/src/js/animations/: countdown.js
template/tools/: README.md  pyproject.toml
template/tools/customsnake/: __init__.py  cli.py  core.py  imaging.py  scaffold.py
